<resources>
    <string name="app_name">Zadanie</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Log In</string>
    <string name="login_failed">"Log In failed"</string>
    <string name="action_sign_up">Sign up </string>
    <string name="login_sign_up">"Sign up failed"</string>
    <string name="or_log_in">Already have an account ?</string>
    <string name="create_account">Create account ?</string>
    <string name="bars">Bars</string>
    <string name="log_out">Log out</string>
    <string name="repeat_password">Password again</string>
    <string name="back">back</string>
    <string name="zobrazit_na_mape">Zobrazit na mape</string>
    <string name="password_visibility_button_toggle_text">Toggle Password Visibility</string>
    <string name="bar_menu">Bar Menu</string>
    <string name="contacts">Contacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="add">Add</string>
    <string name="logged_user">Logged User</string>
</resources>