<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/barsMenu"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/bar_menu"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/logoutMenuItem"
                android:icon="@drawable/ic_baseline_logout_24"
                android:title="@string/log_out"
                app:showAsAction="withText" />
            <item
                android:id="@+id/goToContactsMenuItem"
                android:icon="@drawable/ic_baseline_contact_page_24"
                android:title="@string/contacts"
                app:showAsAction="withText" />
        </menu>

    </item>

</menu>